debug js scripts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
           <label for="add1">1st number</label>
           <input id="add1" class="form-control" type="text">
@@ -19,8 +19,21 @@
           <label for="add2">2nd number</label>
           <input id="add2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn">Add!</button>
+
+        <select id="operation">
+          <option value="add">add</option>
+          <option value="subtract">subtract</option>
+          <option value="multiply">multiply</option>
+          <option value="divide">divide</option>
+        </select>
+
+
+        
+        <button type="submit" class="btn">Submit</button>
       </form>
+      <div id="output">
+
+      </div>
     </div>
   </body>
 </html>
